--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,12 @@ All notable changes to this project will be documented in this file.
 This project adheres to [Semantic Versioning](http://semver.org/).
 All minor versions less than 1.0.0 are breaking changes.
 
+## [Unreleased]
+### Added
+- tests using mocha, chai, mock-browser, mock-raf
+### Fixed
+- get basic tests running
+
 ## 0.0.1 - 2016-06-07
 ### Added
 - base untested resize-observer
