--- a/CHANGELOG
+++ b/CHANGELOG
@@ -9,6 +9,7 @@ All minor versions less than 1.0.0 are breaking changes.
 - tests using mocha, chai, mock-browser, mock-raf
 ### Fixed
 - get basic tests running
+- several critical typos and bugs that kept anything from working
 
 ## 0.0.1 - 2016-06-07
 ### Added
